controllers/k8s/backend-deployment.yaml

apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: ikbel-ben-mansour-3
spec:
  type: NodePort
  selector:
    app: backend
  ports:
  - port: 3000
    targetPort: 3000
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: ikbel-ben-mansour-3
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: ikbel436/frontend
        ports:
        - containerPort: 3000
