controllers/k8s/frontend-deployment.yaml

apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: achat-depl
spec:
  type: NodePort
  selector:
    app: frontend
  ports:
  - port: 80
    targetPort: 80
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: achat-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: ikbel436/achat_frontend
        ports:
        - containerPort: 80
