controllers/k8s/hhhhh-deployment.yaml

apiVersion: v1
kind: Service
metadata:
  name: hhhhh-service
  namespace: ikbel-ben-mansour-3
spec:
  type: NodePort
  selector:
    app: hhhhh
  ports:
  - port: 80
    targetPort: 80
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: hhhhh
  namespace: ikbel-ben-mansour-3
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hhhhh
  template:
    metadata:
      labels:
        app: hhhhh
    spec:
      containers:
      - name: hhhhh
        image: ikbel436/frontend
        ports:
        - containerPort: 80
