controllers/k8s/my-service-deployment.yaml

apiVersion: v1
kind: Service
metadata:
  name: my-service-service
  namespace: my-namespace
spec:
  type: NodePort
  selector:
    app: my-service
  ports:
  - port: 8080
    targetPort: 8080
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-service
  namespace: my-namespace
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-service
  template:
    metadata:
      labels:
        app: my-service
    spec:
      containers:
      - name: my-service
        image: my-docker-image:latest
        ports:
        - containerPort: 8080
