controllers/k8s/mysql-deployment.yaml

apiVersion: v1
kind: Service
metadata:
  name: mysql-service
  namespace: achat-depl
spec:
  ports:
  - port: 3306
    targetPort: 3306
  selector:
    app: mysql
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
  namespace: achat-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
      - name: mysql
        image: mysql:5.7
        ports:
        - containerPort: 3306
