controllers/k8s/mysqllll-deployment.yaml

apiVersion: v1
kind: Service
metadata:
  name: mysqllll-service
  namespace: islem1
spec:
  ports:
  - port: 3306
    targetPort: 3306
  selector:
    app: mysqllll
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysqllll
  namespace: islem1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysqllll
  template:
    metadata:
      labels:
        app: mysqllll
    spec:
      containers:
      - name: mysqllll
        image: mysql:5.7
        ports:
        - containerPort: 3306
