controllers/k8s/nginx-deployment.yaml

apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: islem1
spec:
  type: NodePort
  selector:
    app: nginx
  ports:
  - port: 80
    targetPort: 80
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  namespace: islem1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: ikbel436/achat_frontend:latest
        ports:
        - containerPort: 80
