controllers/k8s/springboot-backend-deployment.yaml

apiVersion: v1
kind: Service
metadata:
  name: springboot-backend-service
  namespace: achat-depl
spec:
  type: NodePort
  selector:
    app: springboot-backend
  ports:
  - port: 8089
    targetPort: 8089
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: springboot-backend
  namespace: achat-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: springboot-backend
  template:
    metadata:
      labels:
        app: springboot-backend
    spec:
      containers:
      - name: springboot-backend
        image: ikbel436/achat_backend
        ports:
        - containerPort: 8089
